--- a/Minimum_Spanning_Tree_VLSI.ipynb
+++ b/Minimum_Spanning_Tree_VLSI.ipynb
@@ -13,7 +13,7 @@
    "id": "a1c15b6a",
    "metadata": {},
    "source": [
-    "In the Optimal_solutions_VLSI notebook, we examine some approaches about finding optimal solutions to TSP instances related to VLSI design. Next, in the notebook about the near-optimal solutions TSP VLSI instances, we examine some approaches which can lead to near-optimal solutions with instances of much larger number of cities (>100). However, we noticed that these methods cannot guarantee that the generated solutions will never be longer than a certain tour length. In this notebook, we will examine one method that produces solutions to TSP instances which are guaranteed to be no more than as a specific tour."
+    "In the Optimal_solutions_VLSI notebook, we examine some approaches about finding optimal solutions to TSP instances related to VLSI design. Next, in the notebook about the near-optimal solutions TSP VLSI instances, we examine some approaches which can lead to near-optimal solutions with instances of much larger number of cities (>100). However, we noticed that these methods cannot guarantee that the generated solutions will never be longer than a certain tour length. In this notebook, we will examine one method that produces solutions to TSP instances which are guaranteed to be no more than a specific tour."
    ]
   },
   {
@@ -56,11 +56,11 @@
    "id": "d3665bf5",
    "metadata": {},
    "source": [
-    "The datasets used in this project were provided by Andre Rohe, based on VLSI data sets studied at the Forschungsinstitut für Diskrete Mathematik, Universität Bonn VLSI Instances. As described in another notebook (check Optimal_solutions_VLSI)\n",
+    "The datasets used in this project were provided by Andre Rohe, based on VLSI data sets studied at the Forschungsinstitut für Diskrete Mathematik, Universität Bonn [VLSI Instances](http://www.math.uwaterloo.ca/tsp/vlsi/index.html). As described in another notebook (check Optimal_solutions_VLSI)\n",
     "\n",
-    "    Very Large Scale Integration (VLSI) refers to the process that enables the creation of an integrated circuit (IC) by combining multiple MOS transistors onto one silicon chip.\n",
+    "> Very Large Scale Integration (VLSI) refers to the process that enables the creation of an integrated circuit (IC) by combining multiple MOS transistors onto one silicon chip.\n",
     "\n",
-    "These datasets contain coordinates of points of interest in 2-D. In this notebook, we will use an instance of 1436 cities.\n"
+    "These datasets contain coordinates of points of interest in 2-D. In this notebook, we will use an instance of 1083 cities.\n"
    ]
   },
   {
@@ -112,7 +112,7 @@
     "\n",
     "> List all the edges and sort them, shortest first. Initialize a tree to be a single root city (we'll arbitrarily shoose the first city). Now repeat the following until the tree contains all the cities: find the shortest edge that links a city (A) that is in the tree to a city (B) that is not yet in the tree, and add B to the list of A's children in the tree.\n",
     "\n",
-    "The time copmplexity of this algorithm is O((V + E)logV), where V is the number of vertices and E is the number of edges.As a first step, let's create one minimum spanning tree for the imported dataset.\n",
+    "The time complexity of this algorithm is O((V + E)logV), where V is the number of vertices and E is the number of edges. As a first step, let's create one minimum spanning tree for the imported dataset.\n",
     "The implementation of this approach is illustated in the cell below:"
    ]
   },
@@ -153,37 +153,6 @@
     "    edges = [(A, B) for A in cities for B in cities \n",
     "                    if id(A) < id(B)]\n",
     "    return sorted(edges, key=lambda edge: distance(*edge))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "c0750ad2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\ndef plot_graph(graph):\\n    \"Given a graph of the form {parent: [child...]}, plot the vertexes and edges.\"\\n    plt.figure(figsize=(10, 10))\\n    vertexes = {v for parent in graph for v in graph[parent]} | set(graph)\\n    edges = {(parent, child) for parent in graph for child in graph[parent]}\\n    for edge in edges:\\n        plot_lines(edge, \\'ro-\\')\\n    total_length = sum(distance(p, c) for (p, c) in edges)\\n    print(\\'{} node Graph of total length: {:.1f}\\'.format(len(vertexes), total_length))\\n    '"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "def plot_graph(graph):\n",
-    "    \"Given a graph of the form {parent: [child...]}, plot the vertexes and edges.\"\n",
-    "    plt.figure(figsize=(10, 10))\n",
-    "    vertexes = {v for parent in graph for v in graph[parent]} | set(graph)\n",
-    "    edges = {(parent, child) for parent in graph for child in graph[parent]}\n",
-    "    for edge in edges:\n",
-    "        plot_lines(edge, 'ro-')\n",
-    "    total_length = sum(distance(p, c) for (p, c) in edges)\n",
-    "    print('{} node Graph of total length: {:.1f}'.format(len(vertexes), total_length))\n",
-    "    \"\"\""
    ]
   },
   {
